# BNetToPrime

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindGecode.cmake
source/: MVQMC.h  formulae_resolver.h  header.h  implicant_enumerator.h  io.h  main.cpp  network_parser.h
